--- a/test/nonconvex/Test Nonconvex 10-10.ipynb
+++ b/test/nonconvex/Test Nonconvex 10-10.ipynb
@@ -5921,6 +5921,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9f5bfabd-ec13-446b-92de-64470c6e6c26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  97.000000         97.000000    100.000000\n",
+      "mean   -0.142267          0.061757      4.052898\n",
+      "std     0.389631          0.452838      8.074547\n",
+      "min    -0.440422          0.000000      0.228722\n",
+      "25%    -0.375679          0.000000      2.112305\n",
+      "50%    -0.316696          0.000000      2.655058\n",
+      "75%    -0.078003          0.000000      3.411582\n",
+      "max     1.706401          4.023182     59.945528\n",
+      "Number of infeasible solution: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/nc_exact_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cad38e16-1a87-4f11-92b4-b608f7f3ea11",
    "metadata": {},
@@ -6008,6 +6037,35 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/nc_heur_rnd_10-10.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "98d0c92c-adb4-4ebe-b3f4-e5916c80ffcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    -0.148620          0.140217      1.537216\n",
+      "std      0.380832          0.109395      5.929368\n",
+      "min     -0.440422          0.000000      0.681310\n",
+      "25%     -0.378650          0.051315      0.802073\n",
+      "50%     -0.319403          0.127978      0.909706\n",
+      "75%     -0.100397          0.216225      1.015680\n",
+      "max      1.632131          0.484200     60.218013\n",
+      "Number of infeasible solution: 87\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/nc_heur_rnd_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
    ]
   },
   {
@@ -7830,6 +7888,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "614db061-abbe-4b6b-8f41-dda2c358deae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count   98.000000         98.000000    100.000000\n",
+      "mean     4.651240          0.054699      1.536912\n",
+      "std     24.428034          0.383372      8.430341\n",
+      "min     -0.104355          0.000000      0.073968\n",
+      "25%      0.066503          0.000000      0.090278\n",
+      "50%      0.370687          0.000000      0.122201\n",
+      "75%      3.289588          0.000000      0.268598\n",
+      "max    241.369778          2.982027     60.316354\n",
+      "Number of infeasible solution: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/nc_heur_n1_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9819c60c-df5f-41c6-ae83-888c75aa78d7",
    "metadata": {},
@@ -8082,6 +8169,35 @@
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
     "df.to_csv(\"result/nc_lr_10-10.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "acd95199-2603-45d4-93e4-241fd9675ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.987660          0.000328      0.002967\n",
+      "std      0.726339          0.003058      0.001384\n",
+      "min      0.188000          0.000000      0.001007\n",
+      "25%      0.474683          0.000000      0.002001\n",
+      "50%      0.676017          0.000000      0.002512\n",
+      "75%      1.240204          0.000000      0.003359\n",
+      "max      3.899173          0.030524      0.007515\n",
+      "Number of infeasible solution: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/nc_lr_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
    ]
   },
   {
@@ -8417,8 +8533,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "9a92a2a0-6ed4-4766-90c0-6eb7d379a03a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     0.604957          0.001031      0.003586\n",
+      "std      0.673139          0.006592      0.001777\n",
+      "min     -0.123012          0.000000      0.001265\n",
+      "25%      0.149922          0.000000      0.002156\n",
+      "50%      0.348691          0.000000      0.003095\n",
+      "75%      0.866499          0.000000      0.004134\n",
+      "max      3.367784          0.058074      0.009619\n",
+      "Number of infeasible solution: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/nc_lt_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)+df[\"Sol\"].isna().sum()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6effb71-6b88-4a89-85b0-ca85e959c7ae",
+   "metadata": {},
+   "source": [
+    "## Parametric Learning Then Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f5047221-d573-488f-9874-ff79d14e0cbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 32            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f8346c21-533f-4b8c-9ad3-cf60c2f0049d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "30a68be5-626c-45a7-9c06-c5907c0c664c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 258.35\n",
+      "Epoch 1, Validation Loss: 96.46\n",
+      "Epoch 2, Validation Loss: 6.20\n",
+      "Epoch 3, Validation Loss: 4.04\n",
+      "Epoch 4, Validation Loss: 3.37\n",
+      "Epoch 5, Validation Loss: 2.73\n",
+      "Epoch 6, Validation Loss: 2.24\n",
+      "Epoch 7, Validation Loss: 2.03\n",
+      "Epoch 8, Validation Loss: 2.04\n",
+      "Epoch 9, Validation Loss: 1.84\n",
+      "Epoch 10, Validation Loss: 1.65\n",
+      "Epoch 11, Validation Loss: 1.38\n",
+      "Epoch 12, Validation Loss: 0.74\n",
+      "Epoch 13, Validation Loss: 0.58\n",
+      "Epoch 14, Validation Loss: 0.53\n",
+      "Epoch 15, Validation Loss: 0.13\n",
+      "Epoch 16, Validation Loss: 0.13\n",
+      "Epoch 17, Validation Loss: -0.00\n",
+      "Epoch 18, Validation Loss: -0.03\n",
+      "Epoch 19, Validation Loss: -0.08\n",
+      "Epoch 20, Validation Loss: -0.14\n",
+      "Epoch 21, Validation Loss: 0.40\n",
+      "Epoch 22, Validation Loss: -0.42\n",
+      "Epoch 23, Validation Loss: -0.68\n",
+      "Epoch 24, Validation Loss: -0.52\n",
+      "Epoch 25, Validation Loss: -0.42\n",
+      "Epoch 26, Validation Loss: -0.34\n",
+      "Epoch 27, Validation Loss: -0.88\n",
+      "Epoch 28, Validation Loss: -1.06\n",
+      "Epoch 29, Validation Loss: -1.13\n",
+      "Epoch 30, Validation Loss: -1.14\n",
+      "Epoch 31, Validation Loss: -1.20\n",
+      "Epoch 32, Validation Loss: -1.25\n",
+      "Epoch 33, Validation Loss: -1.44\n",
+      "Epoch 34, Validation Loss: -1.48\n",
+      "Epoch 35, Validation Loss: -1.49\n",
+      "Epoch 36, Validation Loss: -1.60\n",
+      "Epoch 37, Validation Loss: -1.61\n",
+      "Epoch 38, Validation Loss: -1.79\n",
+      "Epoch 39, Validation Loss: -1.76\n",
+      "Epoch 40, Validation Loss: -1.91\n",
+      "Epoch 41, Validation Loss: -1.83\n",
+      "Epoch 42, Validation Loss: -1.92\n",
+      "Epoch 43, Validation Loss: -1.90\n",
+      "Epoch 44, Validation Loss: -1.94\n",
+      "Epoch 45, Validation Loss: -2.01\n",
+      "Epoch 46, Validation Loss: -2.15\n",
+      "Epoch 47, Validation Loss: -2.18\n",
+      "Epoch 48, Validation Loss: -1.76\n",
+      "Epoch 49, Validation Loss: -2.06\n",
+      "Epoch 50, Validation Loss: -2.03\n",
+      "Epoch 51, Validation Loss: -2.06\n",
+      "Epoch 52, Validation Loss: -2.05\n",
+      "Epoch 53, Validation Loss: -2.18\n",
+      "Epoch 54, Validation Loss: -2.20\n",
+      "Epoch 55, Validation Loss: -2.07\n",
+      "Epoch 56, Validation Loss: -2.19\n",
+      "Epoch 57, Validation Loss: -2.16\n",
+      "Epoch 58, Validation Loss: -2.24\n",
+      "Epoch 59, Validation Loss: -2.27\n",
+      "Epoch 60, Validation Loss: -2.07\n",
+      "Epoch 61, Validation Loss: -2.25\n",
+      "Epoch 62, Validation Loss: -0.73\n",
+      "Epoch 63, Validation Loss: -2.20\n",
+      "Epoch 64, Validation Loss: -1.93\n",
+      "Epoch 65, Validation Loss: -2.16\n",
+      "Epoch 66, Validation Loss: -2.31\n",
+      "Epoch 67, Validation Loss: -1.99\n",
+      "Epoch 68, Validation Loss: -2.28\n",
+      "Epoch 69, Validation Loss: -1.80\n",
+      "Epoch 70, Validation Loss: -2.09\n",
+      "Epoch 71, Validation Loss: -1.20\n",
+      "Epoch 72, Validation Loss: -2.12\n",
+      "Epoch 73, Validation Loss: -2.24\n",
+      "Epoch 74, Validation Loss: -2.18\n",
+      "Epoch 75, Validation Loss: -2.17\n",
+      "Epoch 76, Validation Loss: -2.14\n",
+      "Epoch 77, Validation Loss: -2.32\n",
+      "Epoch 78, Validation Loss: -2.15\n",
+      "Epoch 79, Validation Loss: -2.32\n",
+      "Epoch 80, Validation Loss: -2.29\n",
+      "Epoch 81, Validation Loss: -1.74\n",
+      "Epoch 82, Validation Loss: -2.04\n",
+      "Epoch 83, Validation Loss: -2.33\n",
+      "Epoch 84, Validation Loss: -2.28\n",
+      "Epoch 85, Validation Loss: -2.11\n",
+      "Epoch 86, Validation Loss: -2.28\n",
+      "Epoch 87, Validation Loss: -1.94\n",
+      "Epoch 88, Validation Loss: -1.96\n",
+      "Epoch 89, Validation Loss: -2.07\n",
+      "Epoch 90, Validation Loss: -2.30\n",
+      "Epoch 91, Validation Loss: -2.21\n",
+      "Epoch 92, Validation Loss: -1.89\n",
+      "Epoch 93, Validation Loss: -2.36\n",
+      "Epoch 94, Validation Loss: -2.28\n",
+      "Epoch 95, Validation Loss: -2.37\n",
+      "Epoch 96, Validation Loss: -2.26\n",
+      "Epoch 97, Validation Loss: -2.42\n",
+      "Epoch 98, Validation Loss: -2.34\n",
+      "Epoch 99, Validation Loss: -1.58\n",
+      "Epoch 100, Validation Loss: -1.13\n",
+      "Epoch 101, Validation Loss: -2.38\n",
+      "Epoch 102, Validation Loss: -2.38\n",
+      "Epoch 103, Validation Loss: -2.33\n",
+      "Epoch 104, Validation Loss: -2.18\n",
+      "Epoch 105, Validation Loss: -2.21\n",
+      "Epoch 106, Validation Loss: -2.32\n",
+      "Epoch 107, Validation Loss: -2.31\n",
+      "Epoch 108, Validation Loss: -2.06\n",
+      "Epoch 109, Validation Loss: -2.24\n",
+      "Epoch 110, Validation Loss: -2.23\n",
+      "Epoch 111, Validation Loss: -2.25\n",
+      "Epoch 112, Validation Loss: -2.18\n",
+      "Epoch 113, Validation Loss: -2.24\n",
+      "Epoch 114, Validation Loss: -2.16\n",
+      "Epoch 115, Validation Loss: -2.30\n",
+      "Epoch 116, Validation Loss: -2.07\n",
+      "Early stopping at epoch 116\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 68.86 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5770db3d-e5a6-49ea-ac19-5c766b6f56ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 426.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean      3.140313          0.079601      0.000618\n",
+      "std       0.679695          0.057805      0.000527\n",
+      "min       2.023813          0.000000      0.000000\n",
+      "25%       2.694338          0.037228      0.000000\n",
+      "50%       2.993297          0.070248      0.000998\n",
+      "75%       3.404727          0.109723      0.001000\n",
+      "max       6.776588          0.335568      0.002511\n",
+      "Number of infeasible solution: 938\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/nc_pr_10-10.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ee87c055-d2e6-43b9-a006-705574d6ad62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean     3.281654          0.078485      0.000602\n",
+      "std      0.776403          0.057827      0.000516\n",
+      "min      2.135813          0.000000      0.000000\n",
+      "25%      2.826485          0.032311      0.000000\n",
+      "50%      3.078832          0.069870      0.000998\n",
+      "75%      3.507419          0.111662      0.001001\n",
+      "max      6.776588          0.262004      0.002000\n",
+      "Number of infeasible solution: 93\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/nc_pr_10-10.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b4869e5-c7be-4ce7-8c3c-09227ecf29f5",
    "metadata": {},
    "outputs": [],
    "source": []
