--- a/test/nonconvex/Test Nonconvex 500-500.ipynb
+++ b/test/nonconvex/Test Nonconvex 500-500.ipynb
@@ -580,9 +580,375 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "985b57a2-0099-4b2b-a623-5e914b37ca85",
+   "metadata": {},
+   "source": [
+    "## Parametric Learning Then Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "826c4908-7c1f-4cb9-ae66-36a381aec788",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e5f65261-d680-43cc-9305-0e92a8bb3e4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 1024          # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b4e7f75a-e5d2-4848-a53b-44073a314f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmQuadratic\n",
+    "from src.func.layer import netFC\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_ineq, outsize=num_var, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"b\"], [\"x\"], name=\"smap\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap]).to(\"cuda\")\n",
+    "loss_fn = nmQuadratic([\"b\", \"x\"], num_var, num_ineq, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0f623256-9593-4b2b-91ed-e6b3bf9d7d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 12553.04\n",
+      "Epoch 1, Validation Loss: -1.33\n",
+      "Epoch 2, Validation Loss: -16.12\n",
+      "Epoch 3, Validation Loss: -29.17\n",
+      "Epoch 4, Validation Loss: -37.21\n",
+      "Epoch 5, Validation Loss: -43.48\n",
+      "Epoch 6, Validation Loss: -47.20\n",
+      "Epoch 7, Validation Loss: -50.64\n",
+      "Epoch 8, Validation Loss: -53.48\n",
+      "Epoch 9, Validation Loss: -56.61\n",
+      "Epoch 10, Validation Loss: -61.43\n",
+      "Epoch 11, Validation Loss: -61.15\n",
+      "Epoch 12, Validation Loss: -63.67\n",
+      "Epoch 13, Validation Loss: -65.55\n",
+      "Epoch 14, Validation Loss: -65.49\n",
+      "Epoch 15, Validation Loss: -67.17\n",
+      "Epoch 16, Validation Loss: -66.86\n",
+      "Epoch 17, Validation Loss: -69.99\n",
+      "Epoch 18, Validation Loss: -69.55\n",
+      "Epoch 19, Validation Loss: -70.48\n",
+      "Epoch 20, Validation Loss: -68.71\n",
+      "Epoch 21, Validation Loss: -70.86\n",
+      "Epoch 22, Validation Loss: -72.14\n",
+      "Epoch 23, Validation Loss: -73.24\n",
+      "Epoch 24, Validation Loss: -70.37\n",
+      "Epoch 25, Validation Loss: -74.17\n",
+      "Epoch 26, Validation Loss: -74.73\n",
+      "Epoch 27, Validation Loss: -75.11\n",
+      "Epoch 28, Validation Loss: -77.63\n",
+      "Epoch 29, Validation Loss: -76.13\n",
+      "Epoch 30, Validation Loss: -76.07\n",
+      "Epoch 31, Validation Loss: -77.82\n",
+      "Epoch 32, Validation Loss: -77.41\n",
+      "Epoch 33, Validation Loss: -78.04\n",
+      "Epoch 34, Validation Loss: -77.15\n",
+      "Epoch 35, Validation Loss: -78.53\n",
+      "Epoch 36, Validation Loss: -77.14\n",
+      "Epoch 37, Validation Loss: -77.53\n",
+      "Epoch 38, Validation Loss: -79.82\n",
+      "Epoch 39, Validation Loss: -78.12\n",
+      "Epoch 40, Validation Loss: -77.84\n",
+      "Epoch 41, Validation Loss: -79.90\n",
+      "Epoch 42, Validation Loss: -80.48\n",
+      "Epoch 43, Validation Loss: -79.86\n",
+      "Epoch 44, Validation Loss: -80.28\n",
+      "Epoch 45, Validation Loss: -80.36\n",
+      "Epoch 46, Validation Loss: -81.36\n",
+      "Epoch 47, Validation Loss: -81.40\n",
+      "Epoch 48, Validation Loss: -79.91\n",
+      "Epoch 49, Validation Loss: -81.63\n",
+      "Epoch 50, Validation Loss: -80.51\n",
+      "Epoch 51, Validation Loss: -79.49\n",
+      "Epoch 52, Validation Loss: -82.40\n",
+      "Epoch 53, Validation Loss: -82.25\n",
+      "Epoch 54, Validation Loss: -82.08\n",
+      "Epoch 55, Validation Loss: -82.51\n",
+      "Epoch 56, Validation Loss: -82.33\n",
+      "Epoch 57, Validation Loss: -83.32\n",
+      "Epoch 58, Validation Loss: -82.00\n",
+      "Epoch 59, Validation Loss: -82.32\n",
+      "Epoch 60, Validation Loss: -81.71\n",
+      "Epoch 61, Validation Loss: -82.55\n",
+      "Epoch 62, Validation Loss: -83.13\n",
+      "Epoch 63, Validation Loss: -83.01\n",
+      "Epoch 64, Validation Loss: -81.36\n",
+      "Epoch 65, Validation Loss: -83.67\n",
+      "Epoch 66, Validation Loss: -83.93\n",
+      "Epoch 67, Validation Loss: -83.64\n",
+      "Epoch 68, Validation Loss: -84.00\n",
+      "Epoch 69, Validation Loss: -83.56\n",
+      "Epoch 70, Validation Loss: -83.40\n",
+      "Epoch 71, Validation Loss: -83.65\n",
+      "Epoch 72, Validation Loss: -84.06\n",
+      "Epoch 73, Validation Loss: -84.47\n",
+      "Epoch 74, Validation Loss: -84.72\n",
+      "Epoch 75, Validation Loss: -84.05\n",
+      "Epoch 76, Validation Loss: -84.23\n",
+      "Epoch 77, Validation Loss: -84.39\n",
+      "Epoch 78, Validation Loss: -84.28\n",
+      "Epoch 79, Validation Loss: -84.29\n",
+      "Epoch 80, Validation Loss: -84.82\n",
+      "Epoch 81, Validation Loss: -85.64\n",
+      "Epoch 82, Validation Loss: -84.85\n",
+      "Epoch 83, Validation Loss: -85.73\n",
+      "Epoch 84, Validation Loss: -84.13\n",
+      "Epoch 85, Validation Loss: -85.27\n",
+      "Epoch 86, Validation Loss: -84.69\n",
+      "Epoch 87, Validation Loss: -85.28\n",
+      "Epoch 88, Validation Loss: -85.39\n",
+      "Epoch 89, Validation Loss: -85.21\n",
+      "Epoch 90, Validation Loss: -85.34\n",
+      "Epoch 91, Validation Loss: -85.92\n",
+      "Epoch 92, Validation Loss: -85.28\n",
+      "Epoch 93, Validation Loss: -86.14\n",
+      "Epoch 94, Validation Loss: -85.99\n",
+      "Epoch 95, Validation Loss: -86.73\n",
+      "Epoch 96, Validation Loss: -85.18\n",
+      "Epoch 97, Validation Loss: -86.63\n",
+      "Epoch 98, Validation Loss: -85.94\n",
+      "Epoch 99, Validation Loss: -86.03\n",
+      "Epoch 100, Validation Loss: -85.33\n",
+      "Epoch 101, Validation Loss: -86.13\n",
+      "Epoch 102, Validation Loss: -86.05\n",
+      "Epoch 103, Validation Loss: -86.77\n",
+      "Epoch 104, Validation Loss: -86.04\n",
+      "Epoch 105, Validation Loss: -85.71\n",
+      "Epoch 106, Validation Loss: -87.45\n",
+      "Epoch 107, Validation Loss: -86.65\n",
+      "Epoch 108, Validation Loss: -87.07\n",
+      "Epoch 109, Validation Loss: -86.30\n",
+      "Epoch 110, Validation Loss: -86.10\n",
+      "Epoch 111, Validation Loss: -86.12\n",
+      "Epoch 112, Validation Loss: -87.15\n",
+      "Epoch 113, Validation Loss: -87.70\n",
+      "Epoch 114, Validation Loss: -87.72\n",
+      "Epoch 115, Validation Loss: -87.65\n",
+      "Epoch 116, Validation Loss: -87.30\n",
+      "Epoch 117, Validation Loss: -87.79\n",
+      "Epoch 118, Validation Loss: -87.74\n",
+      "Epoch 119, Validation Loss: -87.05\n",
+      "Epoch 120, Validation Loss: -87.08\n",
+      "Epoch 121, Validation Loss: -87.80\n",
+      "Epoch 122, Validation Loss: -87.59\n",
+      "Epoch 123, Validation Loss: -87.43\n",
+      "Epoch 124, Validation Loss: -88.03\n",
+      "Epoch 125, Validation Loss: -87.61\n",
+      "Epoch 126, Validation Loss: -86.77\n",
+      "Epoch 127, Validation Loss: -88.14\n",
+      "Epoch 128, Validation Loss: -88.35\n",
+      "Epoch 129, Validation Loss: -87.93\n",
+      "Epoch 130, Validation Loss: -87.54\n",
+      "Epoch 131, Validation Loss: -86.97\n",
+      "Epoch 132, Validation Loss: -87.91\n",
+      "Epoch 133, Validation Loss: -88.24\n",
+      "Epoch 134, Validation Loss: -88.12\n",
+      "Epoch 135, Validation Loss: -87.99\n",
+      "Epoch 136, Validation Loss: -87.62\n",
+      "Epoch 137, Validation Loss: -88.10\n",
+      "Epoch 138, Validation Loss: -87.58\n",
+      "Epoch 139, Validation Loss: -87.74\n",
+      "Epoch 140, Validation Loss: -88.75\n",
+      "Epoch 141, Validation Loss: -86.71\n",
+      "Epoch 142, Validation Loss: -88.25\n",
+      "Epoch 143, Validation Loss: -87.91\n",
+      "Epoch 144, Validation Loss: -88.01\n",
+      "Epoch 145, Validation Loss: -87.91\n",
+      "Epoch 146, Validation Loss: -87.94\n",
+      "Epoch 147, Validation Loss: -87.88\n",
+      "Epoch 148, Validation Loss: -88.26\n",
+      "Epoch 149, Validation Loss: -88.20\n",
+      "Epoch 150, Validation Loss: -86.42\n",
+      "Epoch 151, Validation Loss: -87.88\n",
+      "Epoch 152, Validation Loss: -88.22\n",
+      "Epoch 153, Validation Loss: -88.73\n",
+      "Epoch 154, Validation Loss: -88.35\n",
+      "Epoch 155, Validation Loss: -88.55\n",
+      "Epoch 156, Validation Loss: -88.71\n",
+      "Epoch 157, Validation Loss: -87.90\n",
+      "Epoch 158, Validation Loss: -88.97\n",
+      "Epoch 159, Validation Loss: -88.76\n",
+      "Epoch 160, Validation Loss: -89.28\n",
+      "Epoch 161, Validation Loss: -88.86\n",
+      "Epoch 162, Validation Loss: -88.31\n",
+      "Epoch 163, Validation Loss: -89.32\n",
+      "Epoch 164, Validation Loss: -88.23\n",
+      "Epoch 165, Validation Loss: -88.87\n",
+      "Epoch 166, Validation Loss: -89.97\n",
+      "Epoch 167, Validation Loss: -88.20\n",
+      "Epoch 168, Validation Loss: -88.75\n",
+      "Epoch 169, Validation Loss: -87.95\n",
+      "Epoch 170, Validation Loss: -88.61\n",
+      "Epoch 171, Validation Loss: -87.63\n",
+      "Epoch 172, Validation Loss: -89.05\n",
+      "Epoch 173, Validation Loss: -88.93\n",
+      "Epoch 174, Validation Loss: -88.41\n",
+      "Epoch 175, Validation Loss: -88.58\n",
+      "Epoch 176, Validation Loss: -88.95\n",
+      "Epoch 177, Validation Loss: -88.68\n",
+      "Epoch 178, Validation Loss: -88.78\n",
+      "Epoch 179, Validation Loss: -88.72\n",
+      "Epoch 180, Validation Loss: -89.17\n",
+      "Epoch 181, Validation Loss: -88.57\n",
+      "Epoch 182, Validation Loss: -88.54\n",
+      "Epoch 183, Validation Loss: -89.62\n",
+      "Epoch 184, Validation Loss: -89.58\n",
+      "Epoch 185, Validation Loss: -89.08\n",
+      "Early stopping at epoch 185\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 157.35 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e153f900-9948-4a6b-9a5c-3c9805fce01c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [11:11<00:00,  1.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean     93.029852          4.366663      0.000845\n",
+      "std       0.002823          1.280261      0.000501\n",
+      "min      93.029763          0.739293      0.000000\n",
+      "25%      93.029763          3.510456      0.000513\n",
+      "50%      93.029763          4.275835      0.001001\n",
+      "75%      93.029763          5.230381      0.001011\n",
+      "max      93.119041          8.286500      0.002445\n",
+      "Number of infeasible solution: 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for b in tqdm(data_test.datadict[\"b\"]):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"b\": torch.unsqueeze(b, 0).to(\"cuda\"), \n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"b\":b.cpu().numpy()})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_var):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(b.cpu().numpy()))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/nc_pr_500-500.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "da5ecc24-c80b-4e56-a913-16448fd55806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1.000000e+02        100.000000    100.000000\n",
+      "mean   9.302976e+01          4.344916      0.000861\n",
+      "std    5.712979e-14          1.152884      0.000541\n",
+      "min    9.302976e+01          1.866629      0.000000\n",
+      "25%    9.302976e+01          3.649780      0.000506\n",
+      "50%    9.302976e+01          4.132823      0.001002\n",
+      "75%    9.302976e+01          5.084770      0.001020\n",
+      "max    9.302976e+01          8.286500      0.002033\n",
+      "Number of infeasible solution: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"result/nc_pr_500-500.csv\", index_col=0).iloc[:100]\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "382a0a8a-d846-4182-ab69-7d618edea9cf",
+   "id": "d3a9b804-fca6-4204-983e-5a822515e7a3",
    "metadata": {},
    "outputs": [],
    "source": []
