--- a/test/quadratic/Test Quadratic 10-10.ipynb
+++ b/test/quadratic/Test Quadratic 10-10.ipynb
@@ -1055,7 +1055,7 @@
    "id": "a941a76c-0ea0-4fb9-a23e-51c85a433463",
    "metadata": {},
    "source": [
-    "### Parametric Learning Then Rounding"
+    "## Parametric Learning Then Rounding"
    ]
   },
   {
