--- a/Test Rosenbrock 50-10000.ipynb
+++ b/Test Rosenbrock 50-10000.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "# init\n",
     "steepness = 50    # steepness factor\n",
-    "num_blocks = 100  # number of expression blocks\n",
+    "num_blocks = 10000# number of expression blocks\n",
     "num_data = 5000   # number of data\n",
     "test_size = 1000  # number of test size\n",
     "val_size = 1000   # number of validation size\n",
@@ -116,76 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96304fbd-08f5-4be7-a81e-83c85332029c",
-   "metadata": {},
-   "source": [
-    "## Heuristic - N1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "356187af-e02d-4478-bf78-ada6a2e1b94b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_heur = model.first_solution_heuristic(nodes_limit=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f4c7fc52-cbbc-4414-bf1d-316d65c8db5b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [06:46<00:00,  2.46it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1.000000e+03            1000.0   1000.000000\n",
-      "mean   1.749761e+12               0.0      0.403884\n",
-      "std    9.192329e+12               0.0      0.166594\n",
-      "min    5.558174e+02               0.0      0.245428\n",
-      "25%    7.700089e+02               0.0      0.310472\n",
-      "50%    8.632258e+02               0.0      0.353868\n",
-      "75%    9.996323e+02               0.0      0.414785\n",
-      "max    4.999519e+13               0.0      1.257725\n",
-      "Number of infeasible solution: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
-    "    # set params\n",
-    "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
-    "    # solve\n",
-    "    tick = time.time()\n",
-    "    xval, objval = model_heur.solve(\"scip\")\n",
-    "    tock = time.time()\n",
-    "    # eval\n",
-    "    params.append(list(p)+list(a))\n",
-    "    sols.append(list(list(xval.values())[0].values()))\n",
-    "    objvals.append(objval)\n",
-    "    conviols.append(sum(model_heur.cal_violation()))\n",
-    "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
-    "time.sleep(1)\n",
-    "print(df.describe())\n",
-    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur_n1_50-100.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9819c60c-df5f-41c6-ae83-888c75aa78d7",
    "metadata": {},
    "source": [
@@ -194,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "160d5677-c861-486f-9533-852d43f971bf",
+   "execution_count": 7,
+   "id": "2134fc68-b81e-441b-bd6f-8cdc5bf74866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,22 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 80   # weight of constraint violation penealty\n",
-    "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
-    "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
-    "hsize = 256           # width of hidden layers for solution mapping\n",
-    "lr = 1e-3             # learning rate"
+    "penalty_weight = 80    # weight of constraint violation penealty\n",
+    "hlayers_sol = 4        # number of hidden layers for solution mapping\n",
+    "hlayers_rnd = 4        # number of hidden layers for solution mapping\n",
+    "hsize = 4096          # width of hidden layers for solution mapping\n",
+    "lr = 1e-3              # learning rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -248,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -256,56 +186,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 20996.05\n",
-      "Epoch 1, Validation Loss: 4016.29\n",
-      "Epoch 2, Validation Loss: 1759.47\n",
-      "Epoch 3, Validation Loss: 1213.61\n",
-      "Epoch 4, Validation Loss: 1522.16\n",
-      "Epoch 5, Validation Loss: 1312.35\n",
-      "Epoch 6, Validation Loss: 1165.38\n",
-      "Epoch 7, Validation Loss: 1032.75\n",
-      "Epoch 8, Validation Loss: 1098.03\n",
-      "Epoch 9, Validation Loss: 1492.84\n",
-      "Epoch 10, Validation Loss: 1189.45\n",
-      "Epoch 11, Validation Loss: 831.75\n",
-      "Epoch 12, Validation Loss: 845.00\n",
-      "Epoch 13, Validation Loss: 885.85\n",
-      "Epoch 14, Validation Loss: 662.87\n",
-      "Epoch 15, Validation Loss: 820.98\n",
-      "Epoch 16, Validation Loss: 756.71\n",
-      "Epoch 17, Validation Loss: 650.82\n",
-      "Epoch 18, Validation Loss: 665.11\n",
-      "Epoch 19, Validation Loss: 884.84\n",
-      "Epoch 20, Validation Loss: 730.10\n",
-      "Epoch 21, Validation Loss: 614.67\n",
-      "Epoch 22, Validation Loss: 644.56\n",
-      "Epoch 23, Validation Loss: 720.34\n",
-      "Epoch 24, Validation Loss: 749.18\n",
-      "Epoch 25, Validation Loss: 666.92\n",
-      "Epoch 26, Validation Loss: 606.64\n",
-      "Epoch 27, Validation Loss: 566.92\n",
-      "Epoch 28, Validation Loss: 766.88\n",
-      "Epoch 29, Validation Loss: 723.36\n",
-      "Epoch 30, Validation Loss: 664.51\n",
-      "Epoch 31, Validation Loss: 715.34\n",
-      "Epoch 32, Validation Loss: 656.88\n",
-      "Epoch 33, Validation Loss: 648.94\n",
-      "Epoch 34, Validation Loss: 617.90\n",
-      "Epoch 35, Validation Loss: 598.58\n",
-      "Epoch 36, Validation Loss: 601.60\n",
-      "Epoch 37, Validation Loss: 912.76\n",
-      "Epoch 38, Validation Loss: 682.82\n",
-      "Epoch 39, Validation Loss: 795.96\n",
-      "Epoch 40, Validation Loss: 665.26\n",
-      "Epoch 41, Validation Loss: 721.86\n",
-      "Epoch 42, Validation Loss: 694.10\n",
-      "Epoch 43, Validation Loss: 633.82\n",
-      "Epoch 44, Validation Loss: 729.53\n",
-      "Epoch 45, Validation Loss: 898.61\n",
-      "Epoch 46, Validation Loss: 1169.38\n",
-      "Early stopping at epoch 46\n",
-      "Best model loaded.\n",
-      "Training complete.\n"
+      "Epoch 0, Validation Loss: 2114689.25\n",
+      "Epoch 1, Validation Loss: 2450158.62\n",
+      "Epoch 2, Validation Loss: 1404921.47\n",
+      "Epoch 3, Validation Loss: 1136594.32\n"
      ]
     }
    ],
@@ -324,34 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:18<00:00, 53.46it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    568.468975          0.005120      0.003273\n",
-      "std     205.694313          0.101694      0.000969\n",
-      "min     266.924016          0.000000      0.000999\n",
-      "25%     366.757142          0.000000      0.002518\n",
-      "50%     558.681739          0.000000      0.003003\n",
-      "75%     720.295802          0.000000      0.003999\n",
-      "max    1574.572316          2.409778      0.008513\n",
-      "Number of infeasible solution: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test, a_test))):\n",
@@ -383,7 +243,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_lr_50-100.csv\")"
+    "df.to_csv(\"result/rb_lr_50-10000.csv\")"
    ]
   },
   {
@@ -396,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0c4b3d02-3cac-4bce-aaaf-43994ff200d6",
+   "execution_count": null,
+   "id": "a771b3d9-7916-4cf9-99bb-0d845ae602c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -418,13 +278,13 @@
     "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
-    "hsize = 256           # width of hidden layers for solution mapping\n",
+    "hsize = 4096          # width of hidden layers for solution mapping\n",
     "lr = 1e-3             # learning rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -450,63 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Validation Loss: 18587.63\n",
-      "Epoch 1, Validation Loss: 3448.91\n",
-      "Epoch 2, Validation Loss: 2870.52\n",
-      "Epoch 3, Validation Loss: 1232.80\n",
-      "Epoch 4, Validation Loss: 1303.39\n",
-      "Epoch 5, Validation Loss: 1380.01\n",
-      "Epoch 6, Validation Loss: 1107.19\n",
-      "Epoch 7, Validation Loss: 14572.58\n",
-      "Epoch 8, Validation Loss: 2064.73\n",
-      "Epoch 9, Validation Loss: 24670.45\n",
-      "Epoch 10, Validation Loss: 843.25\n",
-      "Epoch 11, Validation Loss: 727.15\n",
-      "Epoch 12, Validation Loss: 2243217268.91\n",
-      "Epoch 13, Validation Loss: 794.01\n",
-      "Epoch 14, Validation Loss: 827.54\n",
-      "Epoch 15, Validation Loss: 809.01\n",
-      "Epoch 16, Validation Loss: 1533.53\n",
-      "Epoch 17, Validation Loss: 712.35\n",
-      "Epoch 18, Validation Loss: 736.32\n",
-      "Epoch 19, Validation Loss: 808.03\n",
-      "Epoch 20, Validation Loss: 725.17\n",
-      "Epoch 21, Validation Loss: 896.27\n",
-      "Epoch 22, Validation Loss: 731.22\n",
-      "Epoch 23, Validation Loss: 639.29\n",
-      "Epoch 24, Validation Loss: 747.64\n",
-      "Epoch 25, Validation Loss: 799.46\n",
-      "Epoch 26, Validation Loss: 965.93\n",
-      "Epoch 27, Validation Loss: 714.63\n",
-      "Epoch 28, Validation Loss: 673.89\n",
-      "Epoch 29, Validation Loss: 692.98\n",
-      "Epoch 30, Validation Loss: 913.31\n",
-      "Epoch 31, Validation Loss: 921.00\n",
-      "Epoch 32, Validation Loss: 704.58\n",
-      "Epoch 33, Validation Loss: 813.10\n",
-      "Epoch 34, Validation Loss: 787.65\n",
-      "Epoch 35, Validation Loss: 749.38\n",
-      "Epoch 36, Validation Loss: 641.45\n",
-      "Epoch 37, Validation Loss: 887.43\n",
-      "Epoch 38, Validation Loss: 743.98\n",
-      "Epoch 39, Validation Loss: 757.09\n",
-      "Epoch 40, Validation Loss: 1006.59\n",
-      "Epoch 41, Validation Loss: 860.04\n",
-      "Epoch 42, Validation Loss: 812.01\n",
-      "Early stopping at epoch 42\n",
-      "Best model loaded.\n",
-      "Training complete.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.problem.neuromancer.trainer import trainer\n",
     "# training\n",
@@ -522,34 +329,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:15<00:00, 63.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    639.164363          0.011845      0.002797\n",
-      "std     138.688235          0.374560      0.000703\n",
-      "min     417.931821          0.000000      0.000999\n",
-      "25%     545.062545          0.000000      0.002113\n",
-      "50%     608.273523          0.000000      0.002994\n",
-      "75%     689.761520          0.000000      0.003030\n",
-      "max    1598.102928         11.844629      0.006236\n",
-      "Number of infeasible solution: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p, a in tqdm(list(zip(p_test, a_test))):\n",
@@ -581,7 +364,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_lt_50-100.csv\")"
+    "df.to_csv(\"result/rb_lt_50-10000.csv\")"
    ]
   },
   {
